# aic

./: .gitignore  .gk.yaml  .goreleaser.yaml  ARCHITECTURE.md  CAPTURE-MODE-TRADEOFFS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  PRODUCT.md  README.ko.md  README.md  RELEASING.md  install.sh
.claude/: settings.local.json
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
.omo/run-continuation/: ses_1912ddf9affepFmJMnUYtmFFNF.json
.xm/op/: brainstorm-2026-05-25-aic-additional-features.json  council-2026-05-25-ssh-multihost.json  debate-2026-05-24-statusbar-ratatui.json  investigate-2026-05-24-statusbar-metrics.json  investigate-2026-05-25-aic-chat-features.json  red-team-2026-05-25-rfc-005-ssh-multihost.json
aic-client/: Cargo.toml  build.rs
aic-client/proptest-regressions/: config.txt
aic-client/src/: agent_event.rs  audit.rs  auto_brancher.rs  cache.rs  chat_registry.rs  config.rs  daemon_install.rs  daemon_version.rs  doctor.rs  error_analyzer.rs  feedback.rs  history.rs  hook_install.rs  keychain.rs  lib.rs  llm_dispatcher.rs  local_record.rs  log_sink.rs  main.rs  project_context.rs  rca.rs  rca_memory.rs  recipes.rs  redaction.rs  repl.rs  risk_guard.rs  snapshot_store.rs  snapshot_timer.rs  spinner.rs  streaming.rs  top.rs  uds_client.rs  update.rs  web.rs  web_dashboard.html
aic-client/src/agent/: audit_batch.rs  auto_rca.rs  bundle.rs  chat_tui.rs  debug.rs  diagnose.rs  gitignore.rs  hosts.rs  markdown.rs  mcp.rs  mod.rs  net_inventory.rs  obs_tools.rs  probes.rs  proc_changes.rs  proc_delta.rs  proc_fd.rs  run_command.rs  sandbox.rs  session.rs  snapshot_capture.rs  sys_sampler.rs  sysinfo.rs  terminal_evidence.rs  tool_record.rs  tools.rs  types.rs  ui.rs  webhook_watch.rs  whitelist.rs
aic-client/src/agent/remote/: fanout.rs  mod.rs  path_guard.rs  secret_filter.rs  ssh_process.rs  tofu.rs
aic-client/src/outbound/: adapter.rs  mod.rs
aic-client/tests/: cjk_poc.rs  cli_backend_integration.rs  e2e.rs  e2e_advanced.rs  e2e_headless.rs  llm_integration.rs  log_sink_integration.rs  obs_tools_integration.rs  session_connection_integration.rs  snapshot_recorder_e2e.rs
aic-common/: Cargo.toml  build.rs
aic-common/src/: attach.rs  bounded_byte_channel.rs  central_store_flag.rs  error.rs  ipc.rs  lib.rs  paths.rs  proc.rs  redaction.rs  session.rs  shell_hooks.rs
aic-common/tests/: prop_attach_wire.rs  rename_bug_condition.proptest-regressions  rename_bug_condition.rs  rename_preservation.rs  session_id_format.rs  session_path_platform.rs  session_path_roundtrip.rs
aic-server/: Cargo.toml  build.rs
aic-server/src/: agent_event_bus.rs  aicd_autostart.rs  aicd_client.rs  aicd_main.rs  attach_client.rs  attach_server.rs  boundary_detector.rs  boundary_ownership_gate.rs  command_record_store.rs  control_server.rs  hook_events.rs  lib.rs  lock.rs  main.rs  metrics.rs  output_processor.rs  process_inventory_store.rs  pty_manager.rs  ring_buffer.rs  session_processor_pool.rs  session_registry.rs  session_runtime.rs  telemetry.rs  uds_server.rs  webhook_server.rs
aic-server/src/otlp_exporter/: agent.rs  backoff.rs  changes.rs  connections.rs  dns.rs  docker.rs  encode.rs  events.rs  health.rs  host_extra.rs  host_metrics.rs  logs_proto.rs  mod.rs  ntp.rs  proc.rs  process_inventory.rs  spool.rs
aic-server/src/otlp_exporter/logs/: checkpoint.rs  container.rs  exporter.rs  file.rs  filter.rs  journald.rs  limiter.rs  mod.rs  self_layer.rs
aic-server/tests/: log_collection_e2e.rs  multi_session_integration.rs  otlp_exporter_integration.rs  otlp_spool_integration.rs  phase_3_2_read_path.rs  phase_3_3_attach.rs  pipeline_integration.rs  prop_backpressure.rs  prop_dual_write.rs  prop_shadow_equivalence.rs  prop_store_id.rs  prop_store_isolation.rs  prop_store_ring.rs  pty_integration.rs  rss_measurement.rs  self_log_recursion.rs  stale_cleanup_integration.rs  uds_integration.rs  webhook_integration.rs
docs/: AIC-FEATURE-PROPOSALS.md  AIC-SESSION-IMPROVEMENT-ROADMAP.md  PHASE2-RCA-PLAN.md  PRD-AIC-SRE-CHAT.md  PRD-AICD-SUPERVISOR.md  PRD-HOOK-CAPTURE-MODE.md  RFC-001-CENTRALIZED-RECORD-STORE.md  RFC-002-AIC-CHAT-AGENTIC.md  RFC-003-PTY-OWNERSHIP-RISK-HEDGING.md  RFC-004-RATATUI-CHAT-TUI.md  RFC-005-SSH-MULTIHOST.md  RFC-006-LOG-COLLECTION.md  SRE-SCOPE-BOUNDARY.md  SRE-USE-CASES.md
packaging/homebrew/: aic.rb
scripts/: README.md  aicd-metrics.sh  compare-rss.sh  deploy-remote.sh  measure-rss-phase30.sh  measure-rss-phase34.sh  pkill-aic.sh  spawn-aic-sessions.sh  verify-attach.sh
