[workspace]
members = ["aic-common", "aic-server", "aic-client"]
resolver = "2"

# Phase features (phase-3_1 ~ phase-3_5) 는 각 member crate (aic-common / aic-server /
# aic-client) 의 `[features]` 섹션에 선언되어 있다. Cargo workspace root 는 features
# 섹션을 직접 가질 수 없으므로, 대신 모든 crate 가 동일한 phase feature 이름을
# 노출하도록 동기화한다. 정확히 하나의 phase-3_N 만 활성임은 aic-common/build.rs 가
# 빌드 시점에 assert 한다 (Requirement 8.3).
#
# 기본값: phase-3_1 (레거시 호환, Central_Store_Flag default = false).
# 다른 Phase 는 `cargo build --no-default-features --features phase-3_N` 형식으로 선택.
