[package]
name = "aic-client"
version = "0.4.0"
edition = "2021"

[lib]
name = "aic_client"
path = "src/lib.rs"

[[bin]]
name = "aic"
path = "src/main.rs"

[features]
# Phase features — aic-common / aic-server 와 동기화된다.
default = ["phase-3_1"]
phase-3_1 = ["aic-common/phase-3_1", "aic-server/phase-3_1"]
phase-3_2 = ["aic-common/phase-3_2", "aic-server/phase-3_2"]
phase-3_3 = ["aic-common/phase-3_3", "aic-server/phase-3_3"]
phase-3_4 = ["aic-common/phase-3_4", "aic-server/phase-3_4"]
phase-3_5 = ["aic-common/phase-3_5", "aic-server/phase-3_5"]

[dependencies]
aic-common = { path = "../aic-common", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
libc = "0.2"
dirs = "5"
dialoguer = "0.12.0"
terminal_size = "0.4"
unicode-width = "0.2"
regex = "1"
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
ratatui = "0.29"
# `aic update`의 release archive 추출.
flate2 = "1"
tar = "0.4"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
http = "1"
aic-server = { path = "../aic-server", default-features = false }
strip-ansi-escapes = "0.2"
