[package]
name = "aic-client"
version = "0.9.0"
edition = "2021"

[lib]
name = "aic_client"
path = "src/lib.rs"

[[bin]]
name = "aic"
path = "src/main.rs"

[features]
# Phase features — phase 의 단일 원천은 aic-common 이다(build.rs 가 assert).
# aic-server 는 dev-dependency 라서 `cargo install`(dev-dep 제외) 시 참조가 깨지므로
# 여기서 forwarding 하지 않는다. 테스트에서 dev-dep 로 빌드되는 aic-server 는 워크스페이스
# feature 통합으로 동일한 aic-common phase 를 공유한다.
default = ["phase-3_1"]
phase-3_1 = ["aic-common/phase-3_1"]
phase-3_2 = ["aic-common/phase-3_2"]
phase-3_3 = ["aic-common/phase-3_3"]
phase-3_4 = ["aic-common/phase-3_4"]
phase-3_5 = ["aic-common/phase-3_5"]

[dependencies]
aic-common = { path = "../aic-common", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
libc = "0.2"
dirs = "5"
dialoguer = "0.12.0"
terminal_size = "0.4"
unicode-width = "0.2"
# TTY 대화형 입력 line editor — Claude 스타일 slash 후보 패널(ColumnarMenu, ↑↓/Tab/Enter/Esc)
# + CJK Unicode-aware 편집 + history. crossterm 0.28(=ratatui 0.29와 동일)을 쓰는 0.39.x로 고정해
# 중복 crossterm을 피한다. (rustyline에서 이주 — P2 reedline migration 완료.)
reedline = "=0.39.0"
# reedline 메뉴 스타일(NO_COLOR 시 plain) 구성용 — reedline과 동일 버전 사용.
nu-ansi-term = "0.50"
regex = "1"
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
ratatui = "0.29"
# chat status bar 시스템 지표(load/cpu/mem/disk i/o) in-process 수집. disk i/o delta는
# Disks 인스턴스 재사용으로 sysinfo가 자동 계산. system+disk feature만(network/component 제외).
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk"] }
# `aic update`의 release archive 추출.
flate2 = "1"
tar = "0.4"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
http = "1"
aic-server = { path = "../aic-server", default-features = false }
strip-ansi-escapes = "0.2"
