[package]
name = "aic-client"
version = "0.27.0"
edition = "2021"

[lib]
name = "aic_client"
path = "src/lib.rs"

[[bin]]
name = "aic"
path = "src/main.rs"

[features]
# Phase features — phase 의 단일 원천은 aic-common 이다(build.rs 가 assert).
# aic-server 는 dev-dependency 라서 `cargo install`(dev-dep 제외) 시 참조가 깨지므로
# 여기서 forwarding 하지 않는다. 테스트에서 dev-dep 로 빌드되는 aic-server 는 워크스페이스
# feature 통합으로 동일한 aic-common phase 를 공유한다.
default = ["phase-3_1"]
phase-3_1 = ["aic-common/phase-3_1"]
phase-3_2 = ["aic-common/phase-3_2"]
phase-3_3 = ["aic-common/phase-3_3"]
phase-3_4 = ["aic-common/phase-3_4"]
phase-3_5 = ["aic-common/phase-3_5"]

[dependencies]
aic-common = { path = "../aic-common", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# `aic web` 읽기 전용 대시보드(MVP-0). aic-server와 동일한 axum 0.8. query: /web/local 증분 폴링(?since=).
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
libc = "0.2"
dirs = "5"
dialoguer = "0.12.0"
terminal_size = "0.4"
unicode-width = "0.2"
# TTY 대화형 입력 line editor — Claude 스타일 slash 후보 패널(ColumnarMenu, ↑↓/Tab/Enter/Esc)
# + CJK Unicode-aware 편집 + history. crossterm 0.28(=ratatui 0.29와 동일)을 쓰는 0.39.x로 고정해
# 중복 crossterm을 피한다. (rustyline에서 이주 — P2 reedline migration 완료.)
reedline = "=0.39.0"
# reedline 메뉴 스타일(NO_COLOR 시 plain) 구성용 — reedline과 동일 버전 사용.
nu-ansi-term = "0.50"
regex = "1"
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
keyring = { version = "3", default-features = false, features = ["apple-native", "linux-native", "windows-native"] }
# unstable-rendered-line-info: Paragraph::line_count(width) — insert_before에 줄 height를 미리 줘야
# 하므로(RFC-004 step 4), ratatui가 실제 렌더에 쓰는 wrap 줄 수를 단일 소스로 계산한다.
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
# RFC-004 ratatui chat TUI 입력 위젯 평가용(CJK PoC). ratatui 0.29/crossterm 0.28과 정합하는 0.7.x.
tui-textarea = "0.7"
# chat status bar 시스템 지표(load/cpu/mem/disk i/o/net i/o) in-process 수집. disk/net i/o delta는
# Disks·Networks 인스턴스 재사용으로 sysinfo가 자동 계산. system+disk+network feature(component 제외).
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk", "network"] }
# `aic update`의 release archive 추출.
flate2 = "1"
tar = "0.4"
# RFC-004 step 4: ANSI escape(답변/카드 색) → ratatui Text 변환(insert_before용). 7.x=ratatui 0.29 정합(8.x는 0.30+ 금지).
ansi-to-tui = "7"
# RFC-004 step 4b: ChatLoop의 async 키 입력(EventStream) — ratatui 0.29와 동일한 0.28.1에 event-stream
# feature만 더한다(feature unification, 중복 crate 없음). tokio select!로 키 vs status tick vs 출력 통합.
crossterm = { version = "0.28", features = ["event-stream"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
http = "1"
aic-server = { path = "../aic-server", default-features = false }
strip-ansi-escapes = "0.2"
# SRE R1: 관측 백엔드 도구(obs_tools) 통합 테스트용 in-process HTTP mock 서버.
wiremock = "0.6"
