[package]
name = "aic-common"
version = "0.4.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"
rand = "0.8"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
toml = "0.8"
