[package]
name = "aic-common"
version = "0.16.1"
edition = "2021"
build = "build.rs"

[features]
# Phase lock: 정확히 하나의 phase-3_N만 활성이어야 한다 (build.rs에서 assert).
# 기본값은 phase-3_1 (레거시 호환 — Central_Store_Flag default = false).
# 다른 Phase를 선택할 때는 `cargo build --no-default-features --features phase-3_2` 형태로 지정.
default = ["phase-3_1"]
phase-3_1 = []
phase-3_2 = []
phase-3_3 = []
phase-3_4 = []
phase-3_5 = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
libc = "0.2"
rand = "0.8"
tracing = "0.1"
# Attach frame 프로토콜 (aic-common/src/attach.rs) 에서 raw PTY byte slice 를
# 소유권 이전 없이 전달하기 위해 사용한다. serde feature 는 의도적으로 끄고,
# PtyBytes 는 JSON 경로를 거치지 않고 전용 binary wire path 로만 전송된다.
bytes = "1"
# Attach frame async read/write helper 를 위해 필요. tokio 의 io trait 만
# 사용하므로 feature 를 `io-util` 로 최소화한다. aic-server 는 "full" 로 가져가지만
# aic-common 은 lean 하게 유지한다.
# `sync` 는 BoundedByteChannel 이 사용하는 `tokio::sync::mpsc::unbounded_channel` 때문에 필요하다.
tokio = { version = "1", features = ["io-util", "sync"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
toml = "0.8"
# 단위 테스트에서 write_attach_frame → read_attach_frame round-trip 및
# BoundedByteChannel 동시성 테스트를 위해 필요.
# - `macros`: `#[tokio::test]`
# - `rt` / `rt-multi-thread`: 싱글/멀티 스레드 tokio 런타임 (동시성 100k 검증)
# - `sync`: mpsc, Notify 등 동기화 primitive
tokio = { version = "1", features = ["io-util", "macros", "rt", "rt-multi-thread", "sync"] }
