[package]
name = "aic-server"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "aic-session"
path = "src/main.rs"

[[bin]]
name = "aicd"
path = "src/aicd_main.rs"

[dependencies]
aic-common = { path = "../aic-common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
strip-ansi-escapes = "0.2"
libc = "0.2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
