[package]
name = "aic-server"
version = "0.27.0"
edition = "2021"

[[bin]]
name = "aic-session"
path = "src/main.rs"

[[bin]]
name = "aicd"
path = "src/aicd_main.rs"

[features]
# Phase features — aic-common 과 동기화된다. aic-common 이 Phase 의 단일 원천이고,
# 이곳의 feature 는 해당 feature 를 forwarding 하기만 한다. 빌드 시점에 정확히
# 하나만 활성이어야 하며, aic-common/build.rs 가 이를 assert 한다.
default = ["phase-3_1"]
phase-3_1 = ["aic-common/phase-3_1"]
phase-3_2 = ["aic-common/phase-3_2"]
phase-3_3 = ["aic-common/phase-3_3"]
phase-3_4 = ["aic-common/phase-3_4"]
phase-3_5 = ["aic-common/phase-3_5"]

[dependencies]
aic-common = { path = "../aic-common", default-features = false }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
strip-ansi-escapes = "0.2"
libc = "0.2"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
# SRE R2: aicd webhook alert ingestion. axum HTTP 리스너 + HMAC 인증.
# rustls 미사용(평문 localhost 바인드 전용) — TLS는 리버스 프록시에 위임.
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
hmac = "0.12"
sha2 = "0.10"
toml = "0.8"
# SRE t6: OTLP host-metrics exporter.
# - prost: OTLP metrics를 protobuf로 인코딩한다. opentelemetry-proto crate 대신 prost 직접 +
#   손수 정의한 최소 메시지 subset을 쓴다 — opentelemetry-proto는 gen-tonic(-messages)이 tonic/
#   grpc 스택을 끌어와 OTLP/HTTP push엔 과한 의존성이다. 우리는 Gauge + Resource attrs만 보내므로
#   메시지 subset이 작고, prost는 이미 workspace 트리에 캐시된 표준 protobuf 라이브러리다.
prost = "0.13"
# host metrics 수집 — aic-client와 동일 버전/feature(system/disk/network). aic-server용 최소
# 샘플러를 새로 작성하므로 aic-client에 의존하지 않는다(sys_sampler는 pub(crate)).
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk", "network"] }
# OTLP protobuf를 HTTP POST. aic-client와 동일한 reqwest 0.12(rustls-tls). protobuf bytes만 보내므로
# json feature는 불필요. redirect는 기본값(collector는 보통 단일 endpoint).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# SRE t8: OTLP spool 드레인 backoff jitter. aic-common이 이미 rand 0.8을 쓰고 있어 동일 버전으로 맞춘다.
rand = "0.8"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
tempfile = "3"
# webhook_server 통합 테스트에서 실제 HTTP POST를 보낸다.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# attach_server 테스트에서 AttachClientFrame::PtyBytes 를 만들 때 `Bytes` 타입을 직접 쓴다.
# aic-common 이 이미 bytes = "1" 을 선언하고 있어 wire format 은 공유되지만, 여기선
# test-only 편의를 위해 명시적으로 dev-dependency 로 가져온다.
bytes = "1"
